--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,53 @@
     <string name="entrar">Entrar</string>
     <string name="usuario">Usuário</string>
     <string name="senha">Senha</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_tools">Tools</string>
+    <string name="menu_share">Share</string>
+    <string name="menu_send">Send</string>
+    <string name="entregas">Entregas</string>
+    <string name="estoque">Estoque</string>
+    <string name="clientes">Clientes</string>
+    <string name="motoristas">Motoristas</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="celular">Celular</string>
+    <string name="email">Email</string>
+    <string name="endereco">Endereço</string>
+    <string name="nome">Nome</string>
+    <string name="veiculo">VEÍCULO</string>
+    <string name="categoria">Categoria</string>
+    <string name="salvar">Salvar</string>
+    <string name="limpar">Limpar</string>
+    <string name="placa">Placa</string>
+    <string name="ano">Ano</string>
+    <string name="motorista_maiusculo">MOTORISTA</string>
+    <string name="motorista">Motorista</string>
+    <string name="quantidade">Quantidade</string>
+    <string name="descricao">Descrição</string>
+    <string name="codigo">Código</string>
+    <string name="data_chegada">Data Chegada</string>
+    <string name="data_entrega">Data Entrega</string>
+    <string name="produto">Produto</string>
+    <string name="cliente">Cliente</string>
+    <string name="pedido">Pedido</string>
+    <string name="observacoes">Observações</string>
+    <string name="nova">Nova</string>
+    <string name="todas">Todas</string>
+    <string name="novo">Novo</string>
+    <string name="todos">Todos</string>
+    <string name="complemento">Complemento</string>
+    <string name="cidade">Cidade</string>
+    <string name="estado">Estado</string>
 </resources>
