Consertar bugs e modificar alguns layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -155,4 +155,7 @@
     <string name="pedentes">Pedentes</string>
     <string name="realizadas">Realizadas</string>
     <string name="finalizar">Finalizar</string>
+    <string name="galeria">Galeria</string>
+    <string name="camera">Câmera</string>
+    <string name="abrir">Abrir</string>
 </resources>
