Mudar o nome do app para Log INT 4.0

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TCC Logística</string>
+    <string name="app_name">Log INT 4.0</string>
     <string name="logo_empresa">Logo Empresa</string>
     <string name="entrar">Entrar</string>
     <string name="usuario">Usuário</string>
